--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "minecraft-cdk",
-  "version": "1.0.0",
-  "description": "A minecraft infra setup using AWS's CDK.",
-  "main": "index.js",
+  "name": "infra",
+  "version": "0.1.0",
+  "bin": {
+    "infra": "bin/infra.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alexlapinski/minecraft-cdk.git"
+  "devDependencies": {
+    "@aws-cdk/assert": "1.36.1",
+    "@types/jest": "^25.2.1",
+    "@types/node": "10.17.5",
+    "jest": "^25.5.0",
+    "ts-jest": "^25.3.1",
+    "aws-cdk": "1.36.1",
+    "ts-node": "^8.1.0",
+    "typescript": "~3.7.2"
   },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/alexlapinski/minecraft-cdk/issues"
-  },
-  "homepage": "https://github.com/alexlapinski/minecraft-cdk#readme",
   "dependencies": {
-    "aws-cdk": "^1.38.0"
+    "@aws-cdk/core": "1.36.1",
+    "source-map-support": "^0.5.16"
   }
 }
